--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
+/* Import Tailwind CSS */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 @layer base {
   .input {
@@ -12,9 +12,9 @@
   }
   .input:hover, .input:focus{
     @apply bg-zinc-900;
-
   }
 }
+
 input {
     border-radius: 5px;
     outline: none;
