--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,25 +16,35 @@
 }
 
 input {
-    border-radius: 5px;
-    outline: none;
-    border: none;
+  border-radius: 5px;
+  outline: none;
+  border: none;
 }
 
-body, html{
+
+body, html {
   background-color: rgb(5, 5, 5);
-  z-index: 2;
   color: white;
 }
 
-.gradient-wrapper{
-  background: radial-gradient(#3b82f6,#000); /*radial-gradient(#4c1d95, #000);*/
+.gradient-wrapper {
+  background: radial-gradient(#1e3a8a,#000);
   background-size: 100vw 100vh;
   opacity: 0.15;
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
   height: 100vh;
-  
+}
 
+:focus {
+  outline: 2px solid #1e3a8a; 
+}
+
+.hover-bg-zinc-900:hover, .hover-bg-zinc-900:focus {
+  background-color: #1e3a8a; 
+}
+
+.text-on-bg-white {
+  color: white;
 }
